fix scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
 
 body {
   margin: 0;
-  padding: 5px;
+  padding: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
